Fixed overflow issue

--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@ body {
     background-color: var(--color-dark-teal);
     font-family: Arial, sans-serif;
     font-size: 1rem;
-    overflow: hidden;
+    overflow: scroll;
     
 }
 h1 {
